--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewmodel"
-            type="com.example.snoker.view.fragment.ProgressFragment" />
+            type="com.example.snoker.view.fragment.ProgressViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
