--- a/app/src/main/res/menu/navigation_items.xml
+++ b/app/src/main/res/menu/navigation_items.xml
@@ -11,7 +11,7 @@
     <item
         android:id="@+id/board"
         android:enabled="true"
-        android:icon="@drawable/icon_progress"
+        android:icon="@drawable/icon_board"
         android:title="board"
         android:gravity="center_horizontal"
         />
