--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -307,11 +307,16 @@
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="@+id/levelmage" />
 
-        <ImageView
-            android:id="@+id/progressAboveImage"
+        <TextView
+            android:id="@+id/progressAboveText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="52dp"
+            android:fontFamily="@font/noto_sans_kr_bold"
+            android:textSize="25sp"
+            android:letterSpacing="-0.07"
+            android:text="1"
+            android:gravity="center"
             android:background="@drawable/above"
             app:layout_constraintBottom_toBottomOf="@+id/levelmage"
             app:layout_constraintEnd_toEndOf="@+id/levelmage"
